tests/paczka2/big_fuzzy/18507361.err
Error in line 7: XhuvK S709 65,7
Error in line 13: WoPCSC S709 28,0
Error in line 8: uDAwLFt A393 25,5
Error in line 19: 2Bxnxunx4 S887 33,0
Error in line 24: 2Bxnxunx4 S709 61,4
Error in line 39: S729 S729 57,2
Error in line 37: mBrpUsNUXy2 S709 56,7
Error in line 67: WoPCSC S729 68,0
Error in line 76: XhuvK A393 10,82
Error in line 88: uDAwLFt S729 51,5
Error in line 77: mBrpUsNUXy2 S729 61,3
Error in line 94: uDAwLFt S887 48,56
Error in line 92: mBrpUsNUXy2 S887 50,4
Error in line 93: 2Bxnxunx4 S887 7,1
Error in line 101: 2Bxnxunx4 A393 20,6
Error in line 95: poYf0QTD S887 34,4
Error in line 103: WoPCSC S709 90,9
Error in line 116: mBrpUsNUXy2 A393 79,5
Error in line 108: 2Bxnxunx4 S709 84,3
Error in line 117: mBrpUsNUXy2 S709 63,1
Error in line 82: XhuvK S709 118,9
Error in line 127: WoPCSC A393 61,8
Error in line 135: mBrpUsNUXy2 S729 86,0
Error in line 139: S729 S729 127,2
Error in line 100: uDAwLFt A393 0,2
Error in line 142: uDAwLFt S709 98,0
Error in line 144: uDAwLFt S887 90,2
Error in line 148: uDAwLFt S709 69,4
Error in line 138: 2Bxnxunx4 S709 65,7
Error in line 157: WoPCSC A393 14,5
Error in line 165: WoPCSC S709 36,0
Error in line 163: mBrpUsNUXy2 S729 46,4
Error in line 166: WoPCSC S729 22,5
Error in line 177: WoPCSC A393 31,0
Error in line 182: WoPCSC S709 74,5
Error in line 187: WoPCSC S887 4,6
Error in line 199: WoPCSC S709 98,2
Error in line 198: 2Bxnxunx4 S709 45,7
Error in line 207: poYf0QTD S887 99,4
Error in line 215: XhuvK S887 49,98
Error in line 223: WoPCSC SP29 41,0
Error in line 220: 2Bxnxunx4 S729 2,6
Error in line 214: poYf0QTD S709 28,4
Error in line 224: 2Bxnxunx4 A393 80,8
Error in line 228: poYf0QTD S729 17,9
Error in line 242: S729 S709 319,33
